--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,9 @@
   "name": "react-stripe",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
